force-app/main/default/objects/Volunteer_Shift__c/Volunteer_Shift__c.object-meta.xml
<CustomObject>
    <description>Captures shifts made at TA sites</description>
    <label>Volunteer Shift</label>
    <nameField>
        <displayFormat>VS{00000000}</displayFormat>
        <label>Volunteer Shift ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shifts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>