force-app/main/default/objects/Volunteer_Shift__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <description>The Volunteers&#39; certifications assigned to the shift</description>
    <label>Certifications</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>