force-app/main/default/objects/Volunteer_Shift__c/fields/Client_Facilitators__c.field-meta.xml
<CustomField>
    <fullName>Client_Facilitators__c</fullName>
    <label>Client Facilitators</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>