force-app/main/default/objects/Volunteer_Shift__c/fields/Counselor__c.field-meta.xml
<CustomField>
    <fullName>Counselor__c</fullName>
    <label>Counselor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>