force-app/main/default/objects/Volunteer_Shift__c/fields/Electronic_Return_Originator__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Return_Originator__c</fullName>
    <label>Electronic Return Originator</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>