force-app/main/default/objects/Volunteer_Shift__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End Time of Shift</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>