force-app/main/default/objects/Volunteer_Shift__c/fields/End_Time_Converted_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Time_Converted_Text__c</fullName>
    <description>Used for time zone conversion</description>
    <label>End Time Converted Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>