force-app/main/default/objects/Volunteer_Shift__c/fields/Is_Reoccuring__c.field-meta.xml
<CustomField>
    <fullName>Is_Reoccuring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reoccurring</label>
    <type>Checkbox</type>
</CustomField>