force-app/main/default/objects/Volunteer_Shift__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Aggregate of all native languages the counselors assigned to a shift can speak.</description>
    <label>Language</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>