force-app/main/default/objects/Volunteer_Shift__c/fields/Program_Location__c.field-meta.xml
<CustomField>
    <fullName>Program_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Location</label>
    <referenceTo>Program_Location__c</referenceTo>
    <relationshipLabel>Volunteer Shifts</relationshipLabel>
    <relationshipName>Volunteer_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>