force-app/main/default/objects/Volunteer_Shift__c/fields/Shift_Coordinators__c.field-meta.xml
<CustomField>
    <fullName>Shift_Coordinators__c</fullName>
    <label>Shift Coordinators</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>