force-app/main/default/objects/Volunteer_Shift__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The start time of a Volunteer Shift</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>