force-app/main/default/objects/Volunteer_Shift__c/fields/Start_Time_Converted_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Converted_Text__c</fullName>
    <description>Used to convert the start time over to the correct time zone of the appointment.</description>
    <label>Start Time Converted Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>