force-app/main/default/objects/Volunteer_Shift__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <color>#33CC00</color>
                <label>Available</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
                <color>#FFCC33</color>
                <label>Reserved</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#999999</color>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>