force-app/main/default/objects/Volunteer_Shift__c/fields/Support_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Support_Facilitator__c</fullName>
    <label>Support Facilitator</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>